# VulkanAgain2

./: .gitignore  .gitmodules  .nvim.lua  CMakeLists.txt  EngineNotes1  Makefile  VulkanNotes  VulkanNotes2  imgui.ini
lib/vkbootstrap/: VkBootstrap.cpp  VkBootstrap.h  VkBootstrapDispatch.h
shaders/: basic.frag  basic.vert  basic_mesh.vert  common.glsl  gradient_color.comp  input_structures.glsl  mesh.vert  tex_image.frag
src/: demo_application.hpp  main.cpp  vke_allocator.cpp  vke_allocator.hpp  vke_asset.hpp  vke_descriptors.cpp  vke_descriptors.hpp  vke_device.cpp  vke_device.hpp  vke_ecs.hpp  vke_engine.cpp  vke_engine.hpp  vke_frame.hpp  vke_images.cpp  vke_images.hpp  vke_initializers.cpp  vke_initializers.hpp  vke_pipelines.cpp  vke_pipelines.hpp  vke_scene.cpp  vke_scene.hpp  vke_shader.cpp  vke_shader.hpp  vke_swapchain.cpp  vke_swapchain.hpp  vke_system.cpp  vke_system.hpp  vke_system_manager.hpp  vke_types.hpp  vke_utils.hpp  vke_window.cpp  vke_window.hpp
src/assets/: vke_asset.hpp  vke_material.hpp  vke_mesh.hpp  vke_scene.hpp  vke_texture.hpp
src/engine/: vke_engine.cpp  vke_engine.hpp  vke_engine_core.hpp
src/renderer/: vke_device.cpp  vke_pipelines.cpp  vke_pipelines.hpp  vke_swapchain.cpp  vke_swapchain.hpp  vke_types.hpp  vke_utils.hpp  vke_window.cpp  vke_window.hpp
src/systems/: vke_system.hpp  vke_system_manager.hpp
